--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,7 +1,7 @@
 <button
   [ngStyle]="{ 'background-color': color }"
-  class="btn"
-  (click)="onClick()"
->
+  mat-stroked-button color="primary"
+  style="color:white"
+  (click)="onClick()">
   {{ text }}
 </button>
