--- a/src/app/dashboard/add-sensors-data/add-sensors-data.component.html
+++ b/src/app/dashboard/add-sensors-data/add-sensors-data.component.html
@@ -3,17 +3,41 @@
   text="{{ showAddTask ? 'Close' : 'Add' }}"
   (btnClick)="toggleAddTask()"
 ></app-button>
-<form [formGroup]="sensorenDataForm" (ngSubmit)="onSubmit()" *ngIf="showAddTask">
-  <h2>Neuen Messwert hinzufügen</h2>
-    <select formControlName="sensorId">
-        <option value="" disabled>Bitte Sensor auswählen</option>
-        <option *ngFor="let item of storeService.sensoren" [ngValue]="item.id">{{item?.name}}</option>
-      </select>
-    <input placeholder="Datum" type="date" name="datum" formControlName="date">
-    <input placeholder="Temperatur" type="number" name="Temperatur" formControlName="temperature">
-    <input placeholder="Luftfeuchtigkeit" type="number" name="Luftfeutigkeit" formControlName="humidity">
+<form [formGroup]="sensorenDataForm" (ngSubmit)="onSubmit()" *ngIf="showAddTask" class="example-form">
+  <h2 style="text-align:center">Neuen Messwert hinzufügen</h2>
+  <mat-card>
+    <mat-card-content>
+      <mat-form-field class="example-full-width" appearance="fill">
+        <mat-label>Sensor auswählen</mat-label>
+        <select matNativeControl required="" formControlName="sensorId">
+          <option *ngFor="let item of storeService.sensoren" [value]="item.id">{{item?.name}}
+          </option>
+        </select>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-content>
+      <mat-form-field class="example-full-width">
+        <mat-label>Datum</mat-label>
+        <input matInput type="date" name="datum" formControlName="date"/>
+      </mat-form-field>
+    </mat-card-content>
+      <mat-card-content>
+        <mat-form-field class="example-full-width">
+          <mat-label>Temperatur</mat-label>
+          <input matInput type="number" name="Temperatur" formControlName="temperature" min="0" max="100">
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-content>
+        <mat-form-field class="example-full-width">
+          <mat-label>Luftfeuchtigkeit</mat-label>
+          <input matInput type="number" name="Luftfeuchtigkeit" formControlName="humidity" min="0" max="100">
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-content>
+        <button mat-stroked-button color="primary" type="submit">
+          Erfassen
+        </button>
+      </mat-card-content>
+  </mat-card>
 
-    <button class="btn btn-primary" type="submit">
-      Erfassen
-    </button>
 </form>
