--- a/src/app/dashboard/sensors-data/sensors-data.component.html
+++ b/src/app/dashboard/sensors-data/sensors-data.component.html
@@ -1,19 +1,42 @@
-<table>
-    <tr>
-        <th>Sensor</th>
-        <th>Datum</th>
-        <th>Temperatur</th>
-        <th>Luftfeuchtigkeit</th>
-        <th>Standort</th>
-        <th>Position</th>
-      </tr>
-    <tr *ngFor="let item of storeService.sensorenDaten">
-        <td>{{item.sensor.name}}</td>
-        <td>{{item.date | date:'longDate'}}</td>
-        <td>{{item.temperature}}</td>
-        <td>{{item.humidity}}</td>
-        <td>{{item.sensor.location}}</td>
-        <td>{{SensorPosition[item.sensor.position]}}</td>
-        <mat-icon (click)="deleteSensordata(item.id)">delete</mat-icon>
-    </tr>
+
+<table mat-table [dataSource]="storeService.sensorenDaten" class="mat-elevation-z8">
+
+  <ng-container matColumnDef="sensor">
+    <th mat-header-cell *matHeaderCellDef> Sensor </th>
+    <td mat-cell *matCellDef="let item"> {{item.sensor.name}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="datum">
+    <th mat-header-cell *matHeaderCellDef> Datum </th>
+    <td mat-cell *matCellDef="let item"> {{item.date | date:'longDate'}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="temperature">
+    <th mat-header-cell *matHeaderCellDef> Temperatur </th>
+    <td mat-cell *matCellDef="let item"> {{item.temperature}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="humidity">
+    <th mat-header-cell *matHeaderCellDef> Luftfeuchtigkeit </th>
+    <td mat-cell *matCellDef="let item"> {{item.humidity}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="location">
+    <th mat-header-cell *matHeaderCellDef> Standort </th>
+    <td mat-cell *matCellDef="let item"> {{item.sensor.location}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="position">
+  <th mat-header-cell *matHeaderCellDef> Position </th>
+  <td mat-cell *matCellDef="let item">{{SensorPosition[item.sensor.position]}}</td>
+</ng-container>
+
+<ng-container matColumnDef="delete">
+    <th mat-header-cell *matHeaderCellDef>Delete</th>
+    <td mat-cell *matCellDef="let item">
+      <mat-icon (click)="deleteSensordata(item.id)">delete</mat-icon>
+    </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
